Added countdown to UI. Added serializer to API
